--- a/public/assets-guest/css/style.css
+++ b/public/assets-guest/css/style.css
@@ -457,38 +457,48 @@
 /*** Testimonial ***/
 .testimonial-img {
     position: relative;
-    min-height: 400px;
-    overflow: hidden;
+    min-height: 450px;
+    overflow: visible;
+    padding: 20px;
 }
 
 .testimonial-img div {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
     animation-duration: 5s;
+    overflow: visible;
+}
+
+.testimonial-img div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.15);
 }
 
 .testimonial-img div:nth-child(1) {
-    top: 10%;
-    left: 10%;
+    top: 5%;
+    left: 5%;
     animation-delay: .1s;
 }
 
 .testimonial-img div:nth-child(2) {
-    top: 60%;
-    left: 20%;
+    top: 55%;
+    left: 15%;
     animation-delay: .4s;
 }
 
 .testimonial-img div:nth-child(3) {
-    top: 20%;
-    left: 60%;
+    top: 15%;
+    right: 5%;
     animation-delay: .7s;
 }
 
 .testimonial-img div:nth-child(4) {
-    bottom: 10%;
-    right: 10%;
+    bottom: 5%;
+    right: 5%;
     animation-delay: 1s;
 }
 
@@ -501,6 +511,7 @@
     left: -1px;
     box-shadow: 0 0 10px 10px var(--bs-white) inset;
     z-index: 1;
+    border-radius: 15px;
 }
 
 .testimonial-carousel .owl-item img {
